--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+**/node_modules
 
 # testing
 /coverage
@@ -16,6 +16,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+**/*.zip
+/lambda/write-subscriptions/main
 
 npm-debug.log*
 yarn-debug.log*
