--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts-ts": "3.1.0"
@@ -11,7 +12,11 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+
+    "lambda-push-zip": "cd lambda/push/ && zip -r lambda.zip index.js node_modules && cd ../../",
+    "lambda-write-subscriptions-build": "GOOS=linux GOARCH=amd64 go build -o lambda/write-subscriptions/main lambda/write-subscriptions/main.go",
+    "lambda-write-subscriptions-zip": "cd lambda/write-subscriptions/ && zip main.zip main && cd ../../"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
