--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "dexie": "^2.0.4",
+    "moment-timezone": "^0.5.21",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts-ts": "3.1.0"
@@ -13,13 +15,14 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-
+    
     "lambda-push-zip": "cd lambda/push/ && zip -r lambda.zip index.js node_modules && cd ../../",
     "lambda-write-subscriptions-build": "GOOS=linux GOARCH=amd64 go build -o lambda/write-subscriptions/main lambda/write-subscriptions/main.go",
     "lambda-write-subscriptions-zip": "cd lambda/write-subscriptions/ && zip main.zip main && cd ../../"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
+    "@types/moment-timezone": "^0.5.9",
     "@types/node": "^10.11.7",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.9",
