--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,11 @@
 .env.test.local
 .env.production.local
 
-**/*.zip
-/lambda/write-subscriptions/main
-
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# project-specific
+**/*.zip
+/lambda/*/main
