--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
+    "deploy": "netlify deploy",
+    "prod-deploy": "netlify deploy --prod",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
 
