--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "せやかて診断",
-  "name": "せやかて診断",
+  "short_name": "せやかて工藤診断",
+  "name": "せやかて工藤診断",
   "icons": [
     {
       "src": "favicon.ico",
